# SecureScan_Ipssi

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  conftest.py  pyproject.toml
backend/apps/accounts/: authentication.py  fields.py  models.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_userprofile_avatar.py  0003_encrypt_github_token.py  0004_userprofile_gemini_api_key.py  0005_add_multi_provider_fields.py
backend/apps/accounts/views/: auth.py
backend/apps/scanner/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/scanner/migrations/: 0001_initial.py  0002_finding_fix_fields.py  0003_finding_fix_pr_url.py  0004_finding_owasp_confidence.py  0004_finding_status.py  0005_scan_cvss_max_score.py  0006_dast_support.py  0007_pwn_support.py
backend/apps/scanner/services/: apply_fix.py  autofix.py  false_positive_detector.py  language_detector.py  owasp_mapper.py  pattern_fixer.py  pdf_report.py  url_validator.py
backend/apps/scanner/tasks/: __init__.py  analyzers.py  dast_orchestrator.py  orchestrator.py  purge.py  pwn_orchestrator.py
backend/apps/scanner/tests/: test_autofix.py  test_language_detector.py  test_multi_provider_views.py  test_owasp_mapper.py  test_pattern_fixer.py  test_serializers.py  test_tasks.py  test_url_validator.py  test_views.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py  settings.py  test.py
(+86 files in other folders)
