[tool.poetry]
name = "securescan-backend"
version = "0.1.0"
description = "SecureScan — Security analysis & gamified learning platform"
authors = ["SecureScan Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15"
django-cors-headers = "^4.4"
channels = {extras = ["daphne"], version = "^4.1"}
channels-redis = "^4.2"
celery = "^5.4"
redis = "^5.0"
psycopg2-binary = "^2.9"
gunicorn = "^22.0"
semgrep = "^1.153"
bandit = "^1.9"
httpx = "^0.28"
django-celery-beat = "^2.7"
djangorestframework-simplejwt = "^5.5.1"
requests = "^2.31.0"
weasyprint = "^63.0"
google-generativeai = "^0.8"
pip-audit = "^2.7"
beautifulsoup4 = "^4.12"
lxml = "^5.1"
python-nmap = "^0.7"
sslyze = "^6.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8.3"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
